Fix nav z-index

--- a/front-end/src/Components/NavBar/NavBar.css
+++ b/front-end/src/Components/NavBar/NavBar.css
@@ -81,7 +81,7 @@ nav {
   left: 0;
   opacity: 1;
   transition: all 0.3s ease;
-  z-index: 1;
+  z-index: 100;
   /* display: block; */
 }
 
